{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 78,
  "lineage": "afc37b37-a54e-1aca-2b98-1d410b37688d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064e8eb886b31a0db",
            "association_id": "eipassoc-0d154d1a871cf6d94",
            "domain": "vpc",
            "id": "eipalloc-064e8eb886b31a0db",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08a3dd9253d95d641",
            "private_dns": "ip-10-0-0-236.ap-south-1.compute.internal",
            "private_ip": "10.0.0.236",
            "public_dns": "ec2-3-111-81-222.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.111.81.222",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043fafca3b00eea77",
            "association_id": "eipassoc-0bee8ce0fd597beaf",
            "domain": "vpc",
            "id": "eipalloc-043fafca3b00eea77",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-093e5421bae23e628",
            "private_dns": "ip-10-0-64-241.ap-south-1.compute.internal",
            "private_ip": "10.0.64.241",
            "public_dns": "ec2-35-154-92-83.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.92.83",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6615d1e95c98aca",
            "arn": "arn:aws:ec2:ap-south-1:987782713666:instance/i-083553adc3700764c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-083553adc3700764c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a51f3b4f062b5cbd",
            "private_dns": "ip-10-0-0-28.ap-south-1.compute.internal",
            "private_ip": "10.0.0.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0619ba395b6cd8282",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dca7bc9d7bf97ebd",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b470abd3c6fcc3cf"
            ]
          },
          "dependencies": [
            "aws_subnet.public-1",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987782713666:internet-gateway/igw-0b8cf9dab4cadc8c4",
            "id": "igw-0b8cf9dab4cadc8c4",
            "owner_id": "987782713666",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-04f15d83401c9da30"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:987782713666:loadbalancer/net/test-lb-tf/640797df07e2b03e",
            "arn_suffix": "net/test-lb-tf/640797df07e2b03e",
            "dns_name": "test-lb-tf-640797df07e2b03e.elb.ap-south-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:987782713666:loadbalancer/net/test-lb-tf/640797df07e2b03e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "test-lb-tf",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a1c7aaca4a77379f"
              },
              {
                "subnet_id": "subnet-0dca7bc9d7bf97ebd"
              }
            ],
            "subnets": [
              "subnet-0a1c7aaca4a77379f",
              "subnet-0dca7bc9d7bf97ebd"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-04f15d83401c9da30",
            "zone_id": "ZVDDRBQ08TROA"
          },
          "dependencies": [
            "aws_subnet.public-1",
            "aws_subnet.public-2",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-064e8eb886b31a0db",
            "connectivity_type": "public",
            "id": "nat-0ecdee9e3e69ee5b7",
            "network_interface_id": "eni-08a3dd9253d95d641",
            "private_ip": "10.0.0.236",
            "public_ip": "3.111.81.222",
            "subnet_id": "subnet-0dca7bc9d7bf97ebd",
            "tags": {
              "Name": "Nat 1"
            },
            "tags_all": {
              "Name": "Nat 1"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_subnet.public-1",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043fafca3b00eea77",
            "connectivity_type": "public",
            "id": "nat-067b7531ba6674446",
            "network_interface_id": "eni-093e5421bae23e628",
            "private_ip": "10.0.64.241",
            "public_ip": "35.154.92.83",
            "subnet_id": "subnet-0a1c7aaca4a77379f",
            "tags": {
              "Name": "Nat 2"
            },
            "tags_all": {
              "Name": "Nat 2"
            }
          },
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_subnet.public-2",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987782713666:route-table/rtb-05113aa13340cf726",
            "id": "rtb-05113aa13340cf726",
            "owner_id": "987782713666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ecdee9e3e69ee5b7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f15d83401c9da30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw1",
            "aws_subnet.public-1",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987782713666:route-table/rtb-0721a71bdedf3d2de",
            "id": "rtb-0721a71bdedf3d2de",
            "owner_id": "987782713666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-067b7531ba6674446",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f15d83401c9da30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat2",
            "aws_internet_gateway.main",
            "aws_nat_gateway.gw2",
            "aws_subnet.public-2",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987782713666:route-table/rtb-09f2ed9745bee3ae1",
            "id": "rtb-09f2ed9745bee3ae1",
            "owner_id": "987782713666",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b8cf9dab4cadc8c4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f15d83401c9da30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0281d83565ba61a24",
            "route_table_id": "rtb-09f2ed9745bee3ae1",
            "subnet_id": "subnet-0a46e885e3afaa3f0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.private-1",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfbb091d7e46e25d",
            "route_table_id": "rtb-09f2ed9745bee3ae1",
            "subnet_id": "subnet-0006892000ee4d406"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.private-2",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07004e3c100816f6e",
            "route_table_id": "rtb-09f2ed9745bee3ae1",
            "subnet_id": "subnet-0dca7bc9d7bf97ebd"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-1",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062a25f5588665e8c",
            "route_table_id": "rtb-09f2ed9745bee3ae1",
            "subnet_id": "subnet-0a1c7aaca4a77379f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public-2",
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987782713666:security-group/sg-0c72367435e034401",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c72367435e034401",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220309093350507200000004",
            "name_prefix": "terraform-",
            "owner_id": "987782713666",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04f15d83401c9da30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987782713666:subnet/subnet-0a46e885e3afaa3f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.128.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a46e885e3afaa3f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987782713666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1"
            },
            "tags_all": {
              "Name": "private-1"
            },
            "vpc_id": "vpc-04f15d83401c9da30"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987782713666:subnet/subnet-0006892000ee4d406",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.192.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0006892000ee4d406",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987782713666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-2"
            },
            "tags_all": {
              "Name": "private-2"
            },
            "vpc_id": "vpc-04f15d83401c9da30"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987782713666:subnet/subnet-0dca7bc9d7bf97ebd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dca7bc9d7bf97ebd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987782713666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1"
            },
            "tags_all": {
              "Name": "public-1"
            },
            "vpc_id": "vpc-04f15d83401c9da30"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987782713666:subnet/subnet-0a1c7aaca4a77379f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.64.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1c7aaca4a77379f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987782713666",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-2"
            },
            "tags_all": {
              "Name": "public-2"
            },
            "vpc_id": "vpc-04f15d83401c9da30"
          },
          "dependencies": [
            "aws_vpc.web-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:987782713666:vpc/vpc-04f15d83401c9da30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03ca415b80d2ee002",
            "default_route_table_id": "rtb-045016e3431c032c3",
            "default_security_group_id": "sg-0b470abd3c6fcc3cf",
            "dhcp_options_id": "dopt-05f8be1343fd59274",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04f15d83401c9da30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-045016e3431c032c3",
            "owner_id": "987782713666",
            "tags": {
              "Name": "web-vpc"
            },
            "tags_all": {
              "Name": "web-vpc"
            }
          }
        }
      ]
    }
  ]
}